
    HADOOP-9631. ViewFs should use underlying FileSystem's server side defaults.
    (Lohit Vijayarenu and Erik Krogen via zhz)

    HADOOP-14211. FilterFs and ChRootedFs are too aggressive about enforcing
    "authorityNeeded". (Erik Krogen via wang)

    HADOOP-14371. License error in TestLoadBalancingKMSClientProvider.java.
    (hu xiaodong via aajisaka)

Release 2.7.3 - 2016-08-25

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

    HADOOP-12794. Support additional compression levels for GzipCodec.
    (Ravi Mutyala via junping_du)

    HADOOP-13103. Group resolution from LDAP may fail on
    javax.naming.ServiceUnavailableException (szetszwo)

    HADOOP-13039. Add documentation for configuration property
    ipc.maximum.data.length for controlling maximum RPC message size.
    (Mingliang Liu via arp)

    HADOOP-12570. HDFS Secure Mode Documentation updates. (Arpit Agarwal)

    HADOOP-13298. Fix the leftover L&N files in
    hadoop-build-tools/src/main/resources/META-INF/. (ozawa)

  OPTIMIZATIONS

    HADOOP-12810. FileSystem#listLocatedStatus causes unnecessary RPC calls
    (Ryan Blue via vinayakumarb)

  BUG FIXES

    HADOOP-12296. when setnetgrent returns 0 in linux, exception should be
    thrown (Chang Li via jlowe)

    HADOOP-12545. Hadoop javadoc has broken links for AccessControlList,
    ImpersonationProvider, DefaultImpersonationProvider, and DistCp.
    (Arshad Mohammad via aajisaka)

    HADOOP-12374. Updated expunge command description.
    (WeiWei Yang via eyang)

    HADOOP-12348. MetricsSystemImpl creates MetricsSourceAdapter with wrong
    time unit parameter. (zxu via rkanter)

    HADOOP-12482. Race condition in JMX cache update. (Tony Wu via lei)

    HADOOP-12565. Replace DSA with RSA for SSH key type in SingleCluster.md.
    (Mingliang Liu via aajisaka)
